# LU-decomposition

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  lu_solver
include/: Errors.hpp  LU_Solver.hpp  Matrix.hpp  Vector.hpp
src/: LU_Solver.cpp  Matrix.cpp  Vector.cpp  main.cpp
test_data/: test2.txt
